--- a/FullStackCore.WebApi/FullStackCore.WebApi.csproj
+++ b/FullStackCore.WebApi/FullStackCore.WebApi.csproj
@@ -30,4 +30,14 @@
     <ProjectReference Include="..\Libraries\Core.Services\Core.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Controllers\Common\" />
+    <None Remove="Controllers\Admin\" />
+    <None Remove="Controllers\Common\V1\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\Common\" />
+    <Folder Include="Controllers\Admin\" />
+    <Folder Include="Controllers\Common\V1\" />
+  </ItemGroup>
 </Project>
