--- a/Scaffolding/Scaffolding.Data.Test/Scaffolding.Data.Test.csproj
+++ b/Scaffolding/Scaffolding.Data.Test/Scaffolding.Data.Test.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="AsyncEnumerator" Version="4.0.2" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="FluentAssertions" Version="6.11.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="MockQueryable.Moq" Version="7.0.0" />
