--- a/FullStackCore.WebApi/FullStackCore.WebApi.csproj
+++ b/FullStackCore.WebApi/FullStackCore.WebApi.csproj
@@ -25,9 +25,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+    <PackageReference Include="OpenCover" Version="4.7.1221" />
     <PackageReference Include="OpenIddict" Version="4.0.0" />
     <PackageReference Include="OpenIddict.AspNetCore" Version="4.0.0" />
     <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="4.0.0" />
+    <PackageReference Include="ReportGenerator" Version="5.1.20" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
